# OpenGLTemplate

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  LICENSE  README.md  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
core/: CMakeLists.txt
core/include/: App.h  Camera.h  IndexBuffer.h  Mesh.h  Shader.h  ShaderProgram.h  Texture.h  VertexBuffer.h
core/src/: App.cpp  Camera.cpp  IndexBuffer.cpp  Mesh.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VertexBuffer.cpp  stb_image.cpp
gui/: CMakeLists.txt  gui.cpp  gui.h
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
